add category and source manage feature
